time in mesgs configurated and src moved folders

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./",
     "paths": {
-        "@c/*":["components/*"]
+        "@c/*":["src/components/*"],
+        "@h/*":["src/hooks/*"]
     }
   }
 }
