--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "firebase": "^7.17.1",
+    "firebase": "^9.8.1",
+    "firebase-admin": "^10.2.0",
     "next": "9.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
